--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "gatsby": "^3.8.1",
     "gatsby-plugin-gatsby-cloud": "^2.8.1",
     "gatsby-plugin-image": "^1.8.0",
     "gatsby-plugin-manifest": "^3.8.0",
     "gatsby-plugin-offline": "^4.8.0",
     "gatsby-plugin-react-helmet": "^4.8.0",
+    "gatsby-plugin-react-redux": "^1.1.0",
+    "gatsby-plugin-react-redux-persist": "^1.1.0",
     "gatsby-plugin-sharp": "^3.8.0",
     "gatsby-source-filesystem": "^3.8.0",
     "gatsby-source-stripe": "^3.2.2",
@@ -19,9 +22,13 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@netlify/plugin-gatsby": "^1.0.3",
     "autoprefixer": "^10.2.6",
     "gatsby-plugin-postcss": "^4.8.0",
     "postcss": "^8.3.5",
